resolved uneven scaling of the landing page

--- a/Cssfile/style.css
+++ b/Cssfile/style.css
@@ -13,32 +13,16 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: local;
-    height: 100vh;
+    height: auto;
 }
-/*
-.container::before {
-    z-index: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.5);
-}
-*/
+
 .section-one {
     background: rgba(0, 0, 0, .4);
     height: 90%;
+}   .section-one a:hover {
+    background-color: #ffa500;
+    color: #000;
 }
-/*
-.container::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-}*/
-/*.container::before {
-    
-    z-index: 0;
-}*/
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -96,11 +80,25 @@ header {
 h1 {
     font-size: clamp(2rem, 0.6364rem + 4.2614vw, 5rem);;
 }
-.section-one p {
+ p {
     font-size: clamp(1.4rem, 1.1727rem + 0.7102vw, 1.9rem);
     line-height: clamp(2rem, 1.0909rem + 2.8409vw, 4rem);
     padding: clamp(2rem, 1.0909rem + 2.8409vw, 4rem);
     margin-top: clamp(2rem, 1.0909rem + 2.8409vw, 4rem);
+    text-align: center;
+}
+.section-one .watch {
+    text-align: center;
+    font-size: clamp(1.4rem, 1.1727rem + 0.7102vw, 1.9rem);
+    color: #ffa500;
+    padding: 5px;
+}
+.section-one .watch a{
+    border-radius: 5px;
+    padding: 5px;
+}
+.section-one .watch a:hover {
+    color: #000;
 }
 
 /*=========================================================
@@ -111,14 +109,11 @@ h1 {
 @media only screen and (min-device-width:0px) {
     .container {
         border: 1px solid green;
-    }   
-
-
+    }
     .container .header-background {
         position: absolute;
         z-index: -2;
         width: 100%;
-    
         object-fit: cover;
         object-position: center;
         inset: 0;
@@ -183,29 +178,23 @@ h1 {
         color: white;
 
     }
-    .section-one a:hover {
-        background-color: #ffa500;
-        color: #000;
-    }
     h1 {
         margin-top: 15px;
         text-align: center;
         line-height: 1.34m;
     }
+/*
     .section-one p {
         text-align: center;
         padding: 20px 0;
         line-height: 2rem; 
-    }
+    }*/
 
     .section-one a {
-        display: block;
-        text-align: center;
-        font-size: 1.3rem;
-        padding-top: 20px;
         text-decoration: none;
         color: #ffa500;
     }
+
     .section-one a i {
         padding: 0 5px;
     }
@@ -354,26 +343,12 @@ h1 {
         color: white;
         height: 90vh;
     }
-    .section-one a:hover {
-        background-color: #ffa500;
-        color: #000;
-    }
     h1 {
     }
     .section-one p {
         text-align: center;
-  
         padding: 30px 0;
         line-height: 2rem; 
-    }
-    .section-one a {
-        display: block;
-
-        text-align: center;
-        font-size: 1.6rem;
-        padding: 20px;
-        text-decoration: none;
-        color: #ffa500;
     }
     .section-one a i {
         padding: 0 5px;
@@ -381,84 +356,16 @@ h1 {
 }
 
 @media only screen and (min-width:721px ) {
-    /*.container {
-        border: 1px solid green;
-    }   
-
-
-    .container .header-background {
-        position: absolute;
-        z-index: -2;
-        max-width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-        inset: 0;
-    }
-    .navbar {
-        height: 10vh;
-    }
-    .navbar a {
-        font-size: 1.3rem;
-    }
-    .hamburger {
-        display: block;
-        width: 28px;
-        height: 25px;
-        border: 1px solid green;
-    }
-
-    .hamburger.active .middle {
-        width: 0;
-        transition: .3s ease-in-out;
-    }
-    .hamburger.active .top {
-        transform: translateY(7px) rotate(45Deg);
-        transition: .3s ease-in-out;
-    }
-    .hamburger.active .bottom {
-        transform: translateY(-7px) rotate(-45Deg);
-        transition: .3s ease-in-out;
-    }
-    .logo {
-        width: 30px;
-        height: auto;
-    }
-    .menu {
-        position: fixed;
-        top: 50px;
-        border: 1px solid green;
-        left: -100%;
-        width: 100%;
-        flex-direction: column;
-        -ms-flex-direction: column;
-        background-color: #000;
-        color: #ffa500;
-        transition: .4s ease-in-out;
-        background-color: rgba(0, 0, 0, 0);
-    }
-    .menu.active {
-        display: block;
-        left: 0;
-    }
-    .menu li {
-        padding: 5px;
-    }
-
-
+    
     /*===========================================
     ================ SECTION 1 ===================
     =============================================*/
 
     .section-one {
-        padding: 40px 40px;
+
         color: white;
-        height: 90%;
     }
-    .section-one a:hover {
-        background-color: #ffa500;
-        color: #000;
-    }
+
     h1 {
         margin-top: 15px;
         text-align: center;
@@ -468,15 +375,16 @@ h1 {
         text-align: center;
         line-height: 3rem; 
     }
-    .section-one a {
-        display: block;
+    .section-one .watch {
+
+    }
+    .section-one .watch a {
         text-align: center;
-        font-size: 1.6rem;
-        padding-top: 10px;
         text-decoration: none;
         color: #ffa500;
+        margin-top: 40px;
     }
-    .section-one a i {
+    .section-one .watch a i {
         padding: 0 5px;
     }
 
